[rearranger, java] move initialization to holder
GitOrigin-RevId: 31c1efd86133e2255a7223b4551435b0b5cf9419